--- a/nyheder.html
+++ b/nyheder.html
@@ -15,22 +15,27 @@
 <body>
   <nav class="navbar">
     <div class="logo">
-      <img src="images/logofull.png" alt="Radar fuldt logo" class="full-logo" />
-      <img src="images/logocollapse.png" alt="Radar kollapset logo" class="collapsed-logo" />
+      <img src="images/logofull.png" alt="RADAR fuldt logo" class="full-logo" />
+      <img src="images/logocollapse.png" alt="RADAR kollapset logo" class="collapsed-logo" />
     </div>
     <ul class="nav-links">
+      <li><a href="index.html">Program</a></li>
       <li>
-        <a href="index.html">Program</a>
+        <a href="omradar.html">Events</a>
+        <ul class="dropdown">
+          <li><a href="team.html">Alle events</a></li>
+          <li><a href="history.html">Radar Music_Lab</a></li>
+          <li><a href="history.html">#venuehack</a></li>
+        </ul>
       </li>
-      
-      <li><a href="nyheder.html">Nyheder</a>
+      <li>
+        <a href="nyheder.html">Nyheder</a>
         <ul class="dropdown">
           <li><a href="upcoming.html">Blog</a></li>
           <li><a href="past.html">Podcast</a></li>
           <li><a href="past.html">Nyhedsbrev</a></li>
         </ul>
       </li>
-
       <li>
         <a href="omradar.html">Om RADAR</a>
         <ul class="dropdown">
@@ -39,15 +44,19 @@
           <li><a href="history.html">Sociale medier</a></li>
         </ul>
       </li>
-
-      <li><a href="arkiv.html">Arkiv</a>
+      <li>
+        <a href="arkiv.html">Arkiv</a>
         <ul class="dropdown">
           <li><a href="galleri.html">Galleri</a></li>
           <li><a href="past.html">Tidligere arrangementer</a></li>
         </ul>
       </li>
-
-      <li><a href="contact.html">Kontakt</a></li>
+      <li>
+        <a href="contact.html">Kontakt</a>
+        <ul class="dropdown">
+          <li><a href="galleri.html">Bliv frivillig</a></li>
+        </ul>
+      </li>
     </ul>
   </nav>
   
@@ -135,13 +144,13 @@
 
       <footer class="footer">
         <div class="container">
-          <p>&copy; 2024 RADAR Aarhus. Alle rettigheder forbeholdes.</p>
+          <p>&copy; RADAR. Alle rettigheder forbeholdes.</p>
           <ul class="footer-links">
             <li><a href="index.html">Program</a></li>
             <li><a href="nyheder.html">Nyheder</a></li>
             <li><a href="omradar.html">Om RADAR</a></li>
             <li><a href="arkiv.html">Arkiv</a></li>
-            <li><a href="kontakt.html">Kontakt</a></li>
+            <li><a href="index.html">Kontakt</a></li>
           </ul>
         </div>
       </footer>
