--- a/nyheder.html
+++ b/nyheder.html
@@ -136,7 +136,7 @@
             <p>Og hold dig opdateret omkring alt der sker på Radar.</p>
             <form>
               <input type="email" placeholder="Din emailadresse" required />
-              <button type="submit">Subscribe</button>
+              <button type="submit">Tilmeld</button>
             </form>
           </section>
         </aside>
