--- a/omradar.html
+++ b/omradar.html
@@ -86,7 +86,7 @@
 
             Radar er et åbent, netværkende og interagerende spillested, hvor vi lægger stor vægt på at samarbejde med aktører i genrespecifikke miljøer og gennem inddragelse af eksterne koncert- og festivalarrangører. På Radar arbejder vi desuden med udviklingsaktiviteter, rettet mod programudvikling og publikumsudvikling. Aktiviteterne udmønter sig i en række projekter og arbejdsmetoder som f.eks. #venuehack, Radar_HIGH, Radar_MusicLab, børnekoncerter, det fleksible koncertrum og audiocanvas. Læs mere her. </p>
         </div>
-        <img src="images/radarklub.jpg" alt="Team brainstorming in early days">
+        <img src="images/radarklub.jpg" alt="Radar ambition">
       </section>
       
       <section class="section">
@@ -94,22 +94,22 @@
         <p>Vi skaber rammerne, dyrker vækstlaget og sætter scenen for eksperimenterende genrer..</p>
         <div class="values-grid">
           <div>
-            <img src="images/radarfremtid.jpg" alt="Innovation Icon">
+            <img src="images/radarfremtid.jpg" alt="Radar kreativitet og fremtid">
             <h3>Kreativitet</h3>
             <p> Vi dyrker det uprøvede og uventede, hvor unikke musikalske udtryk får plads til at vokse. Radar er et frirum for eksperimenterende genrer, hvor kunstnere tør tage chancer, og publikum inviteres til at opleve musik på nye måder.</p>
           </div>
           <div>
-            <img src="images/venner.jpg" alt="Integrity Icon">
+            <img src="images/venner.jpg" alt="Fælleskab på radar">
             <h3>Fælleskab og mangfoldighed</h3>
             <p>Vi tror på, at et rigt musikmiljø skabes gennem et åbent og inkluderende fællesskab. Hos Radar mødes musikere, publikummer og samarbejdspartnere fra alle baggrunde for at inspirere, lære af hinanden og sammen forme en levende kultur.</p>
           </div>
           <div>
-            <img src="images/otooto.jpg" alt="Collaboration Icon">
+            <img src="images/otooto.jpg" alt="Talentudvikling radar">
             <h3>Talentudvikling & Vækst</h3>
             <p> Vi arbejder målrettet for at støtte upcoming talenter og give nye stemmer en platform. Radar er et springbræt for kunstnere, der kan udforske deres potentiale, udvikle deres kunstneriske identitet og opbygge et publikum, inden de tager springet videre i musikverdenen.</p>
           </div>
           <div>
-            <img src="images/radarfremtid.jpg" alt="Resilience Icon">
+            <img src="images/radarfremtid.jpg" alt="radar inflydelse kultur">
             <h3>Lokal Forankring & Indflydelse</h3>
             <p>Vi er dybt forankrede i Aarhus’ musikkultur og samarbejder tæt med byens aktører for at styrke det lokale vækstlag. Radar skaber grobund for kreativ udfoldelse, kulturel stolthed og en musikscene, der sætter Aarhus på landkortet som et dynamisk og nytænkende musikmiljø.</p>
           </div>
